--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -25,8 +25,8 @@
 
 </style>
 
-<nav class="navbar navbar-expand-sm bg-body-light border-bottom sticky-top">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-sm bg-body-tertiary border-bottom sticky-top">
+    <div class="container-fluid bg-body-tertiary">
       <a class="navbar-brand" href="/listings"><i class="fa-solid fa-compass"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -36,8 +36,8 @@
           <a class="nav-link" href="/listings">Explore</a>
         </div>
         <div class="navbar-nav ms-auto">
-          <form class="d-flex">
-            <input class="form-control me-2 search-inp" type="search" placeholder="Search destinations">
+          <form class="d-flex" id="title-search" action="/listings/name">
+            <input class="form-control me-2 search-inp" type="search" placeholder="Search destinations" name="title">
             <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
           </form>
         </div>
