--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -24,12 +24,14 @@
 
                 <div class="mb-3">
                     <label for="category">Category</label>
-                    <select id="category" class="form-select" aria-label="Default select example" name="listing[category]" required>
-                        <option value="Luxury">Luxury</option>
+                    <select id="category" class="form-select" aria-label="Default select example" name="listing[category]" multiple size="5" required>
+                        <option value="Rooms" selected>Rooms</option>
+                        <option value="Mountain">Mountain</option>
+                        <option value="Luxury" selected>Luxury</option>
                         <option value="Vacation Rentals">Vacation Rentals</option>
                         <option value="Beachfront">Beachfront</option>
                         <option value="Mountain Retreat">Mountain Retreat</option>
-                        <option value="Eco_Friendly">Eco-Friendly</option>
+                        <option value="Eco-Friendly">Eco-Friendly</option>
                         <option value="Historic">Historic</option>
                         <option value="Modern">Modern</option>
                         <option value="Private">Private</option>
@@ -48,15 +50,19 @@
                         <option value="Desert Oasis">Desert Oasis</option>
                         <option value="Beach House">Beach House</option>
                     </select>
+                    <div class="valid-feedback">Looks Good</div>
+                    <div class="invalid-feedback">
+                        please add a valid Description
+                    </div>
                 </div>
                 
                 
                 <div class="mb-3">
                     <label for="image" class="form-label">Enter Image Url :</label>
-                    <input name="listing[image]" placeholder="enter image URL/Link" type="file" id="image" class="form-control" required>
+                    <input name="listing[image]" placeholder="enter image URL/Link" type="file" id="image" class="form-control" multiple accept="image/png, image/jpeg, image/jpg" required>
                     <div class="valid-feedback">Looks Good</div>
-                    <div class="invalid-feedback">
-                        please add a valid Image URL
+                    <div class="invalid-feedback file">
+                        please add a valid Image URL && 3 Image links maximum
                     </div>
                 </div>
 
@@ -97,4 +103,8 @@
             </form>
         </div>
     </div>
+
+    <script>
+        
+    </script>
 
