--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,128 +1,282 @@
 <% layout('./layouts/boilerplate') -%>
 <style>
-    #filters{
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-    }
-    .filter{
-        text-align: center;
-        margin-right: 2rem;
-        margin-top: 2rem;
-        opacity: 0.7;
-    }
+  #filters {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .filter {
+    text-align: center;
+    margin-right: 2rem;
+    margin-top: 2rem;
+    opacity: 0.7;
+  }
 
-    .filter p{
-        font-size: 0.8rem;
-    }
+  .filter p {
+    font-size: 0.8rem;
+  }
 
-    .filter:hover{
-        opacity: 1;
-        cursor: pointer;
-        text-decoration: underline black 2px;
-    }
+  .filter:hover {
+    opacity: 1;
+    cursor: pointer;
+    text-decoration: underline 2px solid black;
+  }
 
-    .tax-info{
-        font-size: 0.8rem;
-        display: none;
+  .btn-hover {
+    background-color: none;
+    border: none;
+    border-radius: 1rem;
+  }
 
-    }
+  .tax-info {
+    font-size: 0.8rem;
+    display: none;
+  }
 
-    .tax-toggle{
-        border: 1px solid black;
-        border-radius: 1rem;
-        height: 3.5rem;
-        padding: 1rem; 
-        margin-left: 5rem;
-        display: flex ;
-        align-items: center;
-    }
+  .tax-toggle {
+    border: 1px solid black;
+    border-radius: 1rem;
+    height: 3.5rem;
+    padding: 1rem;
+    margin-left: 5rem;
+    display: flex;
+    align-items: center;
+  }
 </style>
 <body>
-    <div id="filters" class="mb-3">
-        <div class="filter" >
-            <div><i class="fa-solid fa-fire"></i></div>
-            <p>Trending</p>
-        </div>
+  <div id="filters" class="mb-3 ms-5">
+    <form id="search-form">
+      <input
+        type="radio"
+        class="btn-check"
+        name="search"
+        id="option1"
+        value="Trending"
+        autocomplete="off"
+      />
+      <label for="option1" type="button">
         <div class="filter">
-            <div><i class="fa-solid fa-bed"></i></div>
-            <p>Rooms</p>
+          <div><i class="fa-solid fa-fire"></i></div>
+          <p>Trending</p>
         </div>
+      </label>
+
+      <input
+        type="radio"
+        class="btn-check"
+        name="search"
+        id="option2"
+        value="Rooms"
+        autocomplete="off"
+      />
+      <label for="option2" type="button">
         <div class="filter">
-            <div><i class="fa-solid fa-mountain-city"></i></div>
-            <p>Iconic city</p>
+          <div><i class="fa-solid fa-bed"></i></div>
+          <p>Rooms</p>
         </div>
+      </label>
+
+      <input
+        type="radio"
+        class="btn-check"
+        name="search"
+        id="option3"
+        value="Iconic city"
+        autocomplete="off"
+      />
+      <label for="option3">
         <div class="filter">
-            <div><i class="fa-solid fa-mountain"></i></div>
-            <p>Mountain</p>
+          <div><i class="fa-solid fa-mountain-city"></i></div>
+          <p>Iconic city</p>
         </div>
+      </label>
+
+      <input
+        type="radio"
+        class="btn-check"
+        name="search"
+        id="option4"
+        value="Mountain"
+        autocomplete="off"
+      />
+      <label for="option4">
         <div class="filter">
-            <div><i class="fa-brands fa-fort-awesome"></i></div>
-            <p>Castles</p>
+          <div><i class="fa-solid fa-mountain"></i></div>
+          <p>Mountain</p>
         </div>
+      </label>
+
+      <input
+        type="radio"
+        class="btn-check"
+        name="search"
+        id="option5"
+        value="Castles"
+        autocomplete="off"
+      />
+      <label for="option5">
         <div class="filter">
-            <div><i class="fa-solid fa-person-swimming"></i></div>
-            <p>Amazing pools</p>
+          <div><i class="fa-brands fa-fort-awesome"></i></div>
+          <p>Castles</p>
         </div>
+      </label>
+
+      <input
+        type="radio"
+        class="btn-check"
+        name="search"
+        id="option6"
+        value="Amazing pools"
+        autocomplete="off"
+      />
+      <label for="option6">
         <div class="filter">
-            <div><i class="fa-solid fa-campground"></i></div>
-            <p>Camping</p>
+          <div><i class="fa-solid fa-person-swimming"></i></div>
+          <p>Amazing pools</p>
         </div>
+      </label>
+
+      <input
+        type="radio"
+        class="btn-check"
+        name="search"
+        id="option7"
+        value="Camping"
+        autocomplete="off"
+      />
+      <label for="option7">
         <div class="filter">
-            <div><i class="fa-solid fa-cow"></i></div>
-            <p>Farms</p>
+          <div><i class="fa-solid fa-campground"></i></div>
+          <p>Camping</p>
         </div>
+      </label>
+
+      <input
+        type="radio"
+        class="btn-check"
+        name="search"
+        id="option8"
+        value="Farms"
+        autocomplete="off"
+      />
+      <label for="option8">
         <div class="filter">
-            <div><i class="fa-solid fa-snowflake"></i></div>
-            <p>Arctic</p>
+          <div><i class="fa-solid fa-cow"></i></div>
+          <p>Farms</p>
         </div>
-        <div class="tax-toggle">
-            <div class="form-check-reverse form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault">Display total after taxes</label>
-              </div>
+      </label>
+
+      <input
+        type="radio"
+        class="btn-check"
+        name="search"
+        id="option9"
+        value="Arctic"
+        autocomplete="off"
+      />
+      <label for="option9">
+        <div class="filter">
+          <div><i class="fa-solid fa-snowflake"></i></div>
+          <p>Arctic</p>
         </div>
+      </label>
+    </form>
+
+    <div class="tax-toggle">
+      <div class="form-check-reverse form-switch">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          role="switch"
+          id="flexSwitchCheckDefault"
+        />
+        <label class="form-check-label" for="flexSwitchCheckDefault"
+          >Display total after taxes</label
+        >
+      </div>
     </div>
-    <!-- <h3 class="mt-3 mb-3">All Listing</h3> -->
-    <!-- <form method="GET" action="/listings/new">
+  </div>
+  <!-- <h3 class="mt-3 mb-3">All Listing</h3> -->
+  <!-- <form method="GET" action="/listings/new">
         <button>Create new Listing</button>
     </form> -->
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
-        <%  for(let listing of allListings){  %>
-            <a href="/listings/<%= listing._id %>" class="listing-link">
-                <div class="card col listing-card" >
-                    <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
-                    <div class="card-img-overlay">
-                        
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text">
-                            <b> <%= listing.title %> </b> <br>
-                            &#8377;&nbsp;<%=listing.price.toLocaleString("en-IN"); %> / night
-                            <i class="tax-info">&nbsp; &nbsp; +18% GST</i>
-                        </p>
-                    </div>
-                </div>
-            </a>
-              <% } %>
-    </div>
-    
-    <script>
-        document.querySelector('.filter').addEventListener('click', function(e) {
-            console.log(e.target.innerText);
-        });
+  <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+  <% for(let listing of allListings){ %>
+    <a href="/listings/<%= listing._id %>" class="listing-link">
+      <div class="card col listing-card">
 
-        
-        let taxSwitch = document.getElementById('flexSwitchCheckDefault').addEventListener('click', function(e) {
-            console.log(e.target.checked);
-            let taxInfo = document.querySelectorAll('.tax-info');
-            taxInfo.forEach((tax) => {
-                if(e.target.checked){
-                    tax.style.display = 'inline';
-                }else{
-                    tax.style.display = 'none';
-                }
-            });
+        <!-- Bootstrap Captions Carousel -->
+        <div id="carousel<%= listing._id %>" class="carousel slide" data-bs-ride="carousel">
+          
+          <!-- Indicators -->
+          <div class="carousel-indicators">
+            <% listing.image.forEach((img, i) => { %>
+              <button type="button" data-bs-target="#carousel<%= listing._id %>" data-bs-slide-to="<%= i %>" 
+                class="<%= i === 0 ? 'active' : '' %>" 
+                aria-current="<%= i === 0 ? 'true' : 'false' %>" 
+                aria-label="Slide <%= i + 1 %>"></button>
+            <% }); %>
+          </div>
+
+          <!-- Carousel Slides -->
+          <div class="carousel-inner">
+            <% listing.image.forEach((img, i) => { %>
+              <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+                <img src="<%= img.url %>" class="d-block w-100 card-img-top" style="height: 20rem; object-fit: cover;" alt="listing_image_<%= i %>">
+              </div>
+            <% }); %>
+          </div>
+
+          <% if (listing.image.length > 1) { %>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel<%= listing._id %>" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel<%= listing._id %>" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          <% } %>
+        </div>
+
+        <!-- Listing Info -->
+        <div class="card-body">
+          <p class="card-text">
+            <b> <%= listing.title %> </b><br />
+            &#8377;&nbsp;<%= listing.price.toLocaleString("en-IN") %> / night
+            <i class="tax-info">&nbsp;&nbsp;+18% GST</i>
+          </p>
+        </div>
+
+      </div>
+    </a>
+  <% } %>
+</div>
+
+
+  <script>
+    let form = document.getElementById("search-form");
+    document.querySelectorAll('input[type="radio"]').forEach((input) => {
+          input.addEventListener("change", function (e) {
+            console.log(e.target.value);
+            form.action = "/listings/category?search=" + e.target.value;
+            form.submit();
+          });
+    });
+
+
+    let taxSwitch = document
+      .getElementById("flexSwitchCheckDefault")
+      .addEventListener("click", function (e) {
+        // console.log(e.target.checked);
+        let taxInfo = document.querySelectorAll(".tax-info");
+        taxInfo.forEach((tax) => {
+          if (e.target.checked) {
+            tax.style.display = "inline";
+          } else {
+            tax.style.display = "none";
+          }
         });
-    </script>
+      });
+  </script>
 </body>
