--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,92 +1,181 @@
 <% layout('./layouts/boilerplate') -%>
 <script>
-    const mapToken = "<%= process.env.MAP_TOKEN %>";
-    const listing = <%- JSON.stringify(listing) %>
+  const mapToken = "<%= process.env.MAP_TOKEN %>";
+  const listing = <%- JSON.stringify(listing) %>
 </script>
-    <div class="row mt-5">
-        <div class="col-8 offset-2">
-            <h3><%= listing.title %></h3>
+<div class="row mt-5">
+  <div class="col-8 offset-2">
+    <h3><%= listing.title %></h3>
+  </div>
+  <div class="card col-6 offset-2 show-card listing-card">
+    <div id="listingCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <% listing.image.forEach((img, i) => { %>
+        <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+          <img
+            src="<%= img.url %>"
+            class="d-block w-100 show-img rounded"
+            alt="listing_img"
+            object-fit="cover"
+            style="height: 20rem;"
+          />
         </div>
-            <div class="card col-6 offset-2 show-card listing-card">
-                <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_img">
-                <div class="card-body">
-                    <p class="card-text">Owned by <%= listing.owner.username %></p>
-                    <p class="card-text"><%= listing.description %></p>
-                    <!-- toLocaleString is used to convert to local currency system -->
-                    <p class="card-text">&#x20b9;<%=listing.price.toLocaleString("en-IN"); %></p>
-                    <p class="card-text"><%= listing.location %></p>
-                    <p class="card-text"><%= listing.country %></p>
-                    <p class="card-text"><%= listing.category %></p>
-                </div>
-            </div>
-            <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
-            <div class="btns mb-3">
-                <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-2 add-btn">Edit</a>
-                <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-                    <button class="btn btn-dark offset-4">Delete</button>
-                </form>   
-            </div>
-            <% } %>
-            <div class="col-8 offset-2 mb-3">
-                <% if(currUser){ %>
-                    <hr />
-                <h4>Leave a Review</h4>
-                <form action="/listings/<%= listing.id %>/reviews" method="post" novalidate class="needs-validation">
-                    <div class="mb-3 mt-3">
-                        <fieldset class="starability-slot">
-                            <legend>Rating:</legend>
-                            <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
-                            <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-                            <label for="first-rate1" title="Terrible">1 star</label>
-                            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                            <label for="first-rate2" title="Not good">2 stars</label>
-                            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                            <label for="first-rate3" title="Average">3 stars</label>
-                            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                            <label for="first-rate4" title="Very good">4 stars</label>
-                            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                            <label for="first-rate5" title="Amazing">5 stars</label>
-                        </fieldset>
-                    </div>
-                    <div class="mb-3 mt-3">
-                        <label for="comment" class="form-label">Comment : </label>
-                        <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
-                        <div class="invalid-feedback">Please submit some comment for review</div>
-                    </div>
-                    <button class="btn btn-outline-dark">Submit</button>
-                </form>
-                <% } %>
-                <hr />
-                <% if(listing.reviews.length > 0) {%>
-                <p><b>All Reviews</b></p>
-                <div class="row">
-                <% for(review of listing.reviews) { %>
-                    <div class="card col-5 ms-3 mb-3">  
-                        <div class="card-body">
-                            <h5 class="card-title"><%= review.author.username %></h5>
-                            <p class="card-text"><%= review.comment %></p>
-                            <p class="starability-result" data-rating="<%= review.rating %>">
-                            </p>
-                        </div>
-                        <% if(currUser && currUser._id.equals(review.author._id)){ %>
-                        <form action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" class="mb-3" method="post">
-                            <button class="btn btn-sm btn-dark">Delete</button>
-                        </form>
-                        <% } %>
-                    </div>
-                <% } %>
-                <hr />
-                <% } %>
-                
-            </div>
-            <div class="col-8 offset-2 mb-3">
-                <h3>Where you'll be</h3>
-                <div id="map"></div>
-            </div>
-            </div>
+        <% }); %>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#listingCarousel"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#listingCarousel"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    
 
+    <div class="card-body">
+      <p class="card-text">Owned by <%= listing.owner.username %></p>
+      <p class="card-text"><%= listing.description %></p>
+      <!-- toLocaleString is used to convert to local currency system -->
+      <p class="card-text">
+        &#x20b9;<%=listing.price.toLocaleString("en-IN"); %>
+      </p>
+      <p class="card-text"><%= listing.location %></p>
+      <p class="card-text"><%= listing.country %></p>
+      <p class="card-text">
+        <% for(let i = 0 ; i < listing.category.length ; i++){ %> <%=
+        listing.category[i] %><%= listing.category.length-1 == i ? " " : " , "
+        %> <% } %>
+      </p>
+    </div>
+  </div>
+  <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
+  <div class="btns mb-3">
+    <a
+      href="/listings/<%= listing._id %>/edit"
+      class="btn btn-dark col-2 offset-2 add-btn"
+      >Edit</a
+    >
+    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+      <button class="btn btn-dark offset-4">Delete</button>
+    </form>
+  </div>
+  <% } %>
+  <div class="col-8 offset-2 mb-3">
+    <% if(currUser){ %>
+    <hr />
+    <h4>Leave a Review</h4>
+    <form
+      action="/listings/<%= listing.id %>/reviews"
+      method="post"
+      novalidate
+      class="needs-validation"
+    >
+      <div class="mb-3 mt-3">
+        <fieldset class="starability-slot">
+          <legend>Rating:</legend>
+          <input
+            type="radio"
+            id="no-rate"
+            class="input-no-rate"
+            name="review[rating]"
+            value="1"
+            checked
+            aria-label="No rating."
+          />
+          <input
+            type="radio"
+            id="first-rate1"
+            name="review[rating]"
+            value="1"
+          />
+          <label for="first-rate1" title="Terrible">1 star</label>
+          <input
+            type="radio"
+            id="first-rate2"
+            name="review[rating]"
+            value="2"
+          />
+          <label for="first-rate2" title="Not good">2 stars</label>
+          <input
+            type="radio"
+            id="first-rate3"
+            name="review[rating]"
+            value="3"
+          />
+          <label for="first-rate3" title="Average">3 stars</label>
+          <input
+            type="radio"
+            id="first-rate4"
+            name="review[rating]"
+            value="4"
+          />
+          <label for="first-rate4" title="Very good">4 stars</label>
+          <input
+            type="radio"
+            id="first-rate5"
+            name="review[rating]"
+            value="5"
+          />
+          <label for="first-rate5" title="Amazing">5 stars</label>
+        </fieldset>
+      </div>
+      <div class="mb-3 mt-3">
+        <label for="comment" class="form-label">Comment : </label>
+        <textarea
+          name="review[comment]"
+          id="comment"
+          cols="30"
+          rows="5"
+          class="form-control"
+          required
+        ></textarea>
+        <div class="invalid-feedback">
+          Please submit some comment for review
+        </div>
+      </div>
+      <button class="btn btn-outline-dark">Submit</button>
+    </form>
+    <% } %>
+    <hr />
+    <% if(listing.reviews.length > 0) {%>
+    <p><b>All Reviews</b></p>
+    <div class="row">
+      <% for(review of listing.reviews) { %>
+      <div class="card col-md-4 ms-3 mb-3">
+        <div class="card-body">
+          <h5 class="card-title"><%= review.author.username %></h5>
+          <p class="card-text"><%= review.comment %></p>
+          <p class="starability-result" data-rating="<%= review.rating %>"></p>
+        </div>
+        <% if(currUser && currUser._id.equals(review.author._id)){ %>
+        <form
+          action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+          class="mb-3"
+          method="post"
+        >
+          <button class="btn btn-sm btn-dark">Delete</button>
+        </form>
+        <% } %>
+      </div>
+      <% } %>
+      <hr />
+      <% } %>
+    </div>
+    <div class="col-10 offset-1 mb-3">
+      <h3>Where you'll be</h3>
+      <div id="map" class="w-100"></div>
+    </div>
+  </div>
+</div>
 
-    
 <script src="/js/map.js"></script>
