--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -117,7 +117,7 @@
       <label for="option5">
         <div class="filter">
           <div><i class="fa-brands fa-fort-awesome"></i></div>
-          <p>Castles</p>
+          <p>Castle</p>
         </div>
       </label>
 
