--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -45,10 +45,12 @@
                         <option value="Bungalow">Bungalow</option>
                         <option value="Cabin">Cabin</option>
                         <option value="Apartment">Apartment</option>
-                        <option value="cottage">Cottage</option>
+                        <option value="Cottage">Cottage</option>
                         <option value="Log Cabin">Log Cabin</option>
                         <option value="Desert Oasis">Desert Oasis</option>
                         <option value="Beach House">Beach House</option>
+                        <option value="Island">Island</option>
+                        <option value="Farms">Farms</option>
                     </select>
                     <div class="valid-feedback">Looks Good</div>
                     <div class="invalid-feedback">
