Castels to Castle

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -111,7 +111,7 @@
         class="btn-check"
         name="search"
         id="option5"
-        value="Castles"
+        value="Castle"
         autocomplete="off"
       />
       <label for="option5">
